DemoMetadata/unpackaged/objects/FSL__Criteria__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Criteria_Items__c</fullName>
        <label>Criteria Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Logic__c</fullName>
        <label>Logic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Object_Type__c</fullName>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ServiceAppointment</fullName>
                    <label>Service Appointment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Territories__c</fullName>
        <label>Territories</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__User_Type__c</fullName>
        <label>User Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resource</fullName>
                </value>
                <value>
                    <fullName>Dispatcher</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                    <isActive>false</isActive>
                    <label>Mobile</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Work_Types__c</fullName>
        <label>Work Types</label>
        <length>65536</length>
        <type>LongTextArea</type>
    </fields>
    <label>Criteria</label>
    <listViews>
        <fullName>FSL__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Criteria-{000000}</displayFormat>
        <label>Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>